Camery ready preparation (#1)
* FIX typo

* ENH authors + github repoo link

* FIX typos

* ENH output lanczos

* FIX typo

* ENH ad

* WIP

* MTN latest fig

* FIX figures

--- a/_posts/2024-05-07-bench-hvp.md
+++ b/_posts/2024-05-07-bench-hvp.md
@@ -1,15 +1,29 @@
 ---
 layout: distill
 title: How to compute Hessian-vector products?
-description: The product between the Hessian of a function and a vector, so-called the Hessian-vector product (HVP), is a fundamental quantity to study the variation of a function. It is ubiquitous in traditional optimization and machine learning. However, the computation of HVPs is often considered prohibitive in the context of deep learning, driving practitioners to use proxy quantities to evaluate the loss geometry. Standard automatic differentiation theory predicts that the computational complexity of an HVP is of the same order of magnitude as the complexity of computing a gradient. The goal of this blog post is to provide a practical counterpart to this theoretical result, showing that modern automatic differentiation frameworks, JAX and PyTorch, allow for efficient computation of these HVPs in standard deep learning cost functions.
+description: The product between the Hessian of a function and a vector, the Hessian-vector product (HVP), is a fundamental quantity to study the variation of a function. It is ubiquitous in traditional optimization and machine learning. However, the computation of HVPs is often considered prohibitive in the context of deep learning, driving practitioners to use proxy quantities to evaluate the loss geometry. Standard automatic differentiation theory predicts that the computational complexity of an HVP is of the same order of magnitude as the complexity of computing a gradient. The goal of this blog post is to provide a practical counterpart to this theoretical result, showing that modern automatic differentiation frameworks, JAX and PyTorch, allow for efficient computation of these HVPs in standard deep learning cost functions.
 date: 2024-05-07
 future: true
 htmlwidgets: true
 
 # Anonymize when submitting
 authors:
-  - name: Anonymous
-
+  - name: Mathieu Dagréou
+    url: https://matdag.github.io
+    affiliations: 
+      name: Inria
+  - name: Pierre Ablin
+    url: https://pierreablin.com/
+    affiliations: 
+      name: Apple
+  - name: Samuel Vaiter
+    url: https://samuelvaiter.com/
+    affiliations: 
+      name: CNRS
+  - name: Thomas Moreau
+    url: https://tommoral.github.io/
+    affiliations: 
+      name: Inria
 # must be the exact same name as your blogpost
 bibliography: 2024-05-07-bench-hvp.bib  
 
@@ -22,7 +36,7 @@ toc:
   - subsections:
     - name: Inverse Hessian-vector products (iHVPs) in optimization
     - name: HVPs for the study of the loss landscape
-  - name: A quick detour of automatic differentiation
+  - name: A quick detour by automatic differentiation
   - subsections:
     - name: Computational graph
     - name: Forward mode
@@ -55,19 +69,19 @@ _styles: >
 Hessian-vector products (HVPs) play a central role in the study and the use of the geometric property of the loss function of deep neural networks<d-cite key=Foret2021SAM></d-cite>, as well as in many recent bilevel optimizers<d-cite key=Arbel2022amigo></d-cite>.
 However, computing such quantity is often considered prohibitive by practitioners, discouraging them from using algorithms that rely on HVPs.
 
-With this blog post, we aim to convince the practitioners that with modern automatic differentiation (AD) frameworks such as `JAX` or `PyTorch`, HVPs can be efficiently evaluated. Indeed, standard AD theory predicts that the computational cost of an HVP is of the same order as the cost of computing a gradient. After a brief introduction on why HVPs are useful for optimization and ML applications and on the basis of AD, we explain in detail the AD-based methods to compute an HVP and the reason for their efficiency. We then compare the different methods to compute HVPs for several deep neural network architectures in terms of time and memory for both `JAX` and `PyTorch`. Our results illustrate the complexity predicted by the theory, showing that computing an HVP is not much more expensive than computing a gradient. This opens an avenue to develop efficient second-order informed methods for neural networks.
+With this blog post, we aim to convince the practitioners that with modern automatic differentiation (AD) frameworks such as `JAX` or `PyTorch`, HVPs can be efficiently evaluated. Indeed, standard AD theory predicts that the computational cost of an HVP is of the same order as the cost of computing a gradient. After a brief introduction on why HVPs are useful for optimization and ML applications and on the basis of AD, we explain in detail the AD-based methods to compute an HVP and the reason for their efficiency. In particular, we show that one can compute HVPs without explicit Hessian computation. We then compare the different methods to compute HVPs for several deep neural network architectures in terms of time and memory for both `JAX` and `PyTorch`. Our results illustrate the complexity predicted by the theory, showing that computing an HVP is not much more expensive than computing a gradient. This opens an avenue to develop efficient second-order informed methods for neural networks.
 
 ## What are HVPs and where are they useful?
 
 Let us first introduce the notion of Hessian and HVP. We will consider in this post a twice differentiable function $$f:\mathbb{R}^d\to\mathbb{R}$$ that goes from a vector $$x$$ in space $$\mathbb{R}^d$$ to a real number in $$\mathbb{R}$$. This typically corresponds to a function that maps the value of the parameters $$\theta$$ of a neural network to the loss $$f(\theta)$$.
-For such a function, standard AD can be used to efficiently compute the gradient of the loss $$\nabla f(\theta) = \left[ \frac{\partial f}{\partial \theta_i}(\theta)\right]_{1\le i \le d} \in \mathbb{R}^d$$, using the so-called backpropagation.
+For such a function, standard AD can be used to efficiently compute the gradient of the loss $$\nabla f(\theta) = \left[ \frac{\partial f}{\partial \theta_i}(\theta)\right]_{1\le i \le d} \in \mathbb{R}^d$$, using the backpropagation.
 The Hessian matrix of $$f$$ at $$\theta$$ is the matrix of its second-order partial derivatives
 
 $$
   \nabla^2 f(\theta) = \left[\frac{\partial^2f}{\partial \theta_i\partial \theta_j}(\theta)\right]_{1\leq i,j\leq d}\in\mathbb{R}^{d\times d}\enspace.
 $$
 
-This matrix corresponds to the derivative of the gradient and captures how the gradient will change when moving $$x$$. To evaluate the variation of the gradient when moving $$\theta$$ in the direction $$v\in\mathbb{R}^d$$, one can compute the quantity $$\nabla^2 f(\theta) v\in\mathbb{R}^d$$. This is the so-called Hessian-vector product (HVP).
+This matrix corresponds to the derivative of the gradient and captures how the gradient will change when moving $$x$$. To evaluate the variation of the gradient when moving $$\theta$$ in the direction $$v\in\mathbb{R}^d$$, one can compute the quantity $$\nabla^2 f(\theta) v\in\mathbb{R}^d$$. This is the Hessian-vector product (HVP).
 
 Let us review some use cases of HVPs in optimization and machine learning.
 
@@ -134,7 +148,18 @@ The study of the geometry of neural networks is an active field that aims at und
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/hess_eig.png" class="img-fluid" %}
  
 
-In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-cite><d-cite key=Foret2021SAM></d-cite>, an approximation of the Hessian spectrum is computed thanks to the Lanczos algorithm<d-cite key=Lanczos1950></d-cite>. This algorithm is a modification of the power method where each new iterate is taken in the orthogonal complement of the previous iterates.
+In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-cite><d-cite key=Foret2021SAM></d-cite>, an approximation of the Hessian spectrum is computed thanks to the Lanczos algorithm<d-cite key=Lanczos1950></d-cite>. This algorithm is a modification of the power method where each new iterate is taken in the orthogonal complement of the previous iterates. It outputs a factorization of the Hessian of the form $\nabla^2 f(\theta) = VTV^\top$ where $$V=(v_0,...,v_{k-1})$$ is orthogonal and 
+
+$$
+T = \begin{pmatrix}
+  \alpha_0& \beta_1 & 0 & \cdots & 0\\
+  \beta_1 & \alpha_1 & \beta_2 & \ddots & \vdots\\
+  0 & \beta_2 & \alpha_2 & \ddots & 0\\
+  \vdots & \ddots & \ddots & \ddots & \beta_{k-1}\\
+  0 & \cdots & 0 & \beta_{k-1} & \alpha_{k-1}
+\end{pmatrix}\enspace.
+$$
+
 
 <p class="framed">
   <b class="underline">Lanczos' algorithm</b><br>
@@ -159,7 +184,7 @@ In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-c
 We observe once again that the Hessian information is accessed through HVPs rather than the full Hessian matrix itself.
 
 
-## A quick detour of automatic differentiation
+## A quick detour by automatic differentiation
 
 Automatic differentiation (AD) is an important tool to compute exactly the derivatives of differentiable functions obtained as the composition of simple operations.
 There are two modes in AD; the forward mode that computes Jacobian-vector products (JVPs) and the reverse mode that computes vector-Jacobian products (VJPs).
@@ -182,7 +207,7 @@ The computational complexity of the function evaluation depends on the complexit
 The memory footprint of the evaluation of the function is also linked to the maximum number of parents that can have a vertex in the computational graph, as their value needs to be stored until all children nodes have been computed.
 
 Let us take an example with a multilayer linear perceptron (MLP) with 2 layers.
-The function $$f_x:\mathbb{R}^h\times \mathbb{R}^{h\times p}\to \mathbb{R}$$ is defined for $$x\in\mathbb{R}^p$$ by
+The function $$f_x:\mathbb{R}^h\times \mathbb{R}^{h\times p}\to \mathbb{R}$$ is defined for an input $$x\in\mathbb{R}^p$$ by
 
 \begin{equation}\label{eq:mlp}
   f_x(U, W) = \frac12(UWx)^2\enspace.
@@ -204,7 +229,6 @@ def f(U, W):
 
 Here, the feed-forward structure of the function makes the computational graph very simple, as each node has a single intermediate result parent.
 
-
 AD uses this computational graph to compute the function's derivatives.
 Using the chain rule, the Jacobian $$\frac{\partial f}{\partial \theta}(\theta)$$ of $$f$$ is obtained as a product of the Jacobian of the intermediate states $$z_1, \dots, z_n$$.
 \begin{equation}\label{eq:chain_rule}
@@ -215,22 +239,20 @@ Depending on the order of the multiplication, one can compute the derivative of 
 
 ### Forward mode
 
-The forward mode aims at computing JVPs 
+For a vector $v\in\mathbb{R}^d$, the Jacobian-vector product (JVP) corresponds to the directional derative of $f$ in the direction $v$. It can be computed by the forward mode AD
 
 \begin{equation}\label{eq:chain_rule_jvp}
   \frac{\partial f}{\partial \theta}(\theta)\times v = \frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_1}{\partial \theta}v\enspace.
 \end{equation}
 
-It consists in doing the multiplications in \eqref{eq:chain_rule_jvp} from the right to the left. It is a forward pass in the computational graph where we propagate at the same time the states $$z_i$$ and the partial derivatives $$\frac{\partial z_{i+1}}{\partial z_i}$$. If $$f$$ is real-valued, we get its gradient by computing $$d$$ JVPs since 
-
-$$
-\frac{\partial f}{\partial \theta_i}(\theta) = \frac{\partial f}{\partial \theta}(\theta) e_i
-$$
-
-where $$e_i$$ is the $$i$$-th canonical vector of $$\mathbb{R}^d$$.
+It consists in doing the multiplications in \eqref{eq:chain_rule_jvp} from the right to the left. It is a forward pass in the computational graph where we propagate at the same time the states $$z_i$$ and the partial derivatives $$\frac{\partial z_{i+1}}{\partial z_i}$$. If $$f$$ is real-valued, the $$i$$th coordinate of its gradient is exactly given by product of the Jacobian of $$f$$ and the $$i$$th canonical basis vector $$e_i$$ since 
+\begin{equation}
+\frac{\partial f}{\partial \theta_i}(\theta) = \lim_{t\to 0}\frac{f(\theta+te_i)-f(\theta)}{t}\enspace.
+\end{equation}
+ Thus, we can get its gradient by computing each of the $$d$$ JVPs $$\left(\frac{\partial f}{\partial \theta_i}(\theta)\times e_i\right)_{1\leq i \leq d}$$ with forward AD.
 
 To understand properly what is happening when using forward differentiation, let us go back to the linear MLP defined in \eqref{eq:mlp}.
-If we code ourselves the forward differentiation to get the JVP, we obtain the following code
+If we implement ourselves the forward differentiation to get the JVP, we obtain the following code
 
 ``` python
 def jvp(U, W, v_u, v_w):
@@ -245,18 +267,18 @@ def jvp(U, W, v_u, v_w):
     return v_z3
 ```
 
-In comparison with the code of the evaluation of $$f_x$$, there are two more operations corresponding to the computation of the dual variable `vz1` and `vz2`. In terms of memory, if we consider the computational of the JVP as coded in the previous snippet, the maximum number of parents of a vertex is four. This maximum is achieved by the vertex `vz2` which has the vertices `U`, `vz1`, `vu` and `z1` as parents.
+In comparison with the code of the evaluation of $$f_x$$, there are two more operations corresponding to the computation of the dual variables `v_z1` and `v_z2`. In terms of memory, if we consider the computation of the JVP as coded in the previous snippet, the maximum number of parents of a vertex is four. This maximum is achieved by the vertex `v_z2` which has the vertices `U`, `v_z1`, `v_u` and `z1` as parents.
 
-In `JAX`, we get the JVP of $$f$$ at $$x$$ in the direction $$v$$ with `jax.jvp(f, (params, ), (v, ))[1]`.
+In `JAX`, we get the JVP of a function $$f$$ in the direction $$v$$ with `jax.jvp(f, (params, ), (v, ))[1]`.
 
 ### Reverse mode
-The reverse mode aims at computing VJPs
+The reverse mode is also known as backpropagation in the context of deep learing. For $u\in\mathbb{R}^p$, it aims at computing VJPs
 
 \begin{equation}\label{eq:chain_rule_vjp}
-  v^\top\frac{\partial f}{\partial \theta}(\theta) = v^\top\frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_1}{\partial \theta}\enspace.
+  u^\top\frac{\partial f}{\partial \theta}(\theta) = u^\top\frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_1}{\partial \theta}\enspace.
 \end{equation}
 
-In the reverse AD, the multiplications of \eqref{eq:chain_rule_jvp} are done from the left to the right. It requires doing one forward pass in the computational graph to compute the intermediate states $$z_i$$ and then a backward pass to propagate the successive partial derivatives from the left to the right. Contrary to the forward mode, it has a more important memory footprint. Indeed, it requires storing the values of all the states. For instance, to compute the last term $$\frac{\partial z_3}{\partial z_2}$$, one needs the value of $$z_2$$ which was the first computed during the forward pass. If $$f$$ is scalar, its gradient is a VJP with $$v=1$$. Thus, one can get the gradient on $$f$$ by performing only one reverse differentiation. This makes this mode more efficient in computing gradients.
+In the reverse AD, the multiplications of \eqref{eq:chain_rule_jvp} are done from the left to the right. It requires doing one forward pass in the computational graph to compute the intermediate states $$z_i$$ and then a backward pass to propagate the successive partial derivatives from the left to the right. Contrary to the forward mode, it has a more important memory footprint. Indeed, it requires storing the values of all the states. For instance, to compute the last term $$\frac{\partial z_3}{\partial z_2}$$, one needs the value of $$z_2$$ which was the first computed during the forward pass. If $$f$$ is real-valued, $$u$$ is a scalar and the VJP is the multiplication of the gradient of $$f$$ by $$u$$. Thus, one can get the gradient on $$f$$ by using $$u=1$$ and performing only one reverse differentiation. This makes this mode more efficient in computing gradients.
 
 Let us observe what happens if we code manually the backpropagation to get the gradient of the previous function $$f_x$$ defined by $$f_x(U, W) = \frac12(UW x)^2$$.
 
@@ -268,14 +290,14 @@ def gradient(U, W):
     z3 = 0.5 * z2**2
 
     # Reverse pass
-    ## Transfert function: z3 = 0.5 * z2**2
+    ## Transfer function: z3 = 0.5 * z2**2
     dz2 = z2  # derivative of z3 wrt z2
   
-    ## Transfert function: z2 = U @ z1
+    ## Transfer function: z2 = U @ z1
     dU = jnp.outer(dz2, z1)  # derivative of z3 wrt U
     dz1 = U.T @ dz2  # derivative of z3 wrt z1
   
-    ## Transfert function: z1 = W @ x
+    ## Transfer function: z1 = W @ x
     dW = jnp.outer(dz1, x)   # derivative of z3 wrt W
     
     return dU, dW
@@ -289,7 +311,7 @@ To get the gradient in JAX, one can use `jax.grad(f)(params)`.
 ## Naive computation of HVPs
 Since we are interested in computing $$\nabla^2 f(\theta)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX` by calling `jax.hessian(f)(params) @ v`.
 
-This method is quite cumbersome making it impossible to use for deep neural networks. Indeed, the storage of the full Hessian matrix has $$\mathcal{O}(d^2)$$ complexity where $$d$$ is the input dimension.
+This method is quite cumbersome making it impossible to use for deep neural networks. Indeed, the storage of the full Hessian matrix has $$\mathcal{O}(d^2)$$ complexity where $$d$$ is the dimension of the model's parameters set.
 
 The good news is that we can compute HVP without computing the Hessian thanks to clever use of AD.
 
@@ -418,7 +440,7 @@ def hvp_reverse_over_forward(f, params, v):
   return jax.grad(jvp_fun)(params)
 ```
 
-This method a more efficient than the previous one. Indeed, since we backpropagate only once, the memory burden is lower than for the `reverse_over_reverse` fashion. In comparison with `forward-over-reverse`, the complexity is the same. However, one can notice that the `forward-over-reverse` enables computing at the same time the gradient of $$f$$ and the HVP, which is not the case for the `reverse-over-forward` mode. 
+This method is more efficient than the previous one. Indeed, since we backpropagate only once, the memory burden is lower than for the `reverse_over_reverse` fashion. In comparison with `forward-over-reverse`, the complexity is the same. However, one can notice that the `forward-over-reverse` enables computing at the same time the gradient of $$f$$ and the HVP, which is not the case for the `reverse-over-forward` mode. 
 
 The code of the `reverse-over-forward` HVP for the MLP $$f_x$$ defined by \eqref{eq:mlp} is the following. 
 
@@ -459,15 +481,16 @@ def reverse_over_forward(U, W, v_U, v_W):
 While these three methods compute the same outputs, the different ways of traversing the computational graph change their overall time and memory complexities. We now compare the computation of HVPs with these three methods for various deep-learning architectures. To cover a broad range of use cases, we consider a residual network ([ResNet34](https://huggingface.co/docs/transformers/model_doc/resnet)<d-cite key="He2015resnet"></d-cite>) and a transformer-based architecture ([ViT-base](https://huggingface.co/docs/transformers/model_doc/vit)<d-cite key="Dosovitskiy2021"></d-cite>) for image classification as well as a transformer for natural language processing ([Bert-base](https://huggingface.co/docs/transformers/model_doc/bert#transformers.FlaxBertForTokenClassification).<d-cite key="Devlin2019"></d-cite>).
 We use the `Flax` and `PyTorch` implementations of these architectures available in the [transformers package](https://huggingface.co/docs/transformers/) provided by [Hugging Face 🤗](https://huggingface.co).
 
-All computations were run on an Nvidia A100 GPU with 40 GB of memory.
+All computations were run on an Nvidia A100 GPU with 40 GB of memory. We used the version 0.4.21. of `Jax` and the version 2.1.1. of `torch`. 
 
+The code of the benchmark is available on [this repo](https://github.com/MatDag/bench_hvp/).
 
 ### Time complexity
 
 The first comparison we make is a comparison in terms of wall-clock time between the different ways to compute HVPs and also the computation of a gradient by backpropagation. For each architecture, we compute the gradient of the model with respect to the parameters by backpropagation. We also compute the HVPs in `forward-over-reverse`, `reverse-over-forward` and `reverse-over-reverse` modes. For each computation, we measure the time taken. Specifically for the HVPs, we subtract the time taken by a gradient computation, to get only the time of the overhead required by the HVP computation.
 The inputs for each architecture are generated randomly. For the ResNet34 architecture, we generated a batch of images of size 224x224x3. To limit out-of-memory issues in the experiments, we generated for the ViT architecture images of size 96x96x3. For the BERT architecture, we generated a batch of sequences of length 32.
 
-We first use `JAX` with just-in-time compilation. Each computation is run 90 times. We plot on the left of the figure, the median computation time and also the 20% and 80% percentile. The computations are done with a batch size of 128. The first observation we make is that, in practice, a HVP computation takes between twice and three times the time taken by a gradient computation for the three architectures. This is consistent with the theory. One can notice that the `reverse-over-reverse` is slightly slower than the others in all the cases. The `forward-over-reverse` and `reverse-over-forward` are, as for them, very close in terms of time.
+We first use `JAX` with just-in-time compilation. Each computation is run 90 times. We plot on the left of the figure, the median computation time and also the 20% and 80% percentile in black. The computations are done with a batch size of 128. We observe that, in practice, the overhead over the gradient computation for the HVP computation is between one and twice the time of a gradient computation for the three architectures. Consequently, a whole HVP computation takes between twice and three times the time of a gradient calculation. This is consistent with the theory. One can notice that the `reverse-over-reverse` is slightly slower than the others in all the cases. The `forward-over-reverse` and `reverse-over-forward` are, as for them, very close in terms of time.
 
 We also report on the right figure the computational time of each method with respect to the batch size for the ResNet34 architecture. We observe, as expected, that the computational time scales linearly with the batch size.
 
@@ -477,7 +500,7 @@ We run a similar experiment with the functional API available in `PyTorch` [`tor
 
 In the case of ResNet34, the scaling between the different methods is similar to the one we get with `JAX`. Also, during our experiments, we figured out that batch normalization made the forward computation slow and induced out-of-memory issues. Thus, we removed the batch normalization layers from the ResNet34 architecture.
 
-For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for these architectures, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory. This might be because, at the time we are writing this blog post, the functional API of `PyTorch` is still in its early stages. Particularly, we could not use the compilation with `torch.compile` because it do not work with some operators of `torch.func` such as `torch.func.jvp`.
+For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for these architectures, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory. This might be because, at the time we are writing this blog post, the functional API of `PyTorch` is still in its early stages. Particularly, we could not use the compilation with `torch.compile` because it does not work with some operators of `torch.func` such as `torch.func.jvp`.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_time_torch.png" class="img-fluid" %}
 
@@ -487,13 +510,13 @@ We also compare the memory footprint of each approach. The following figure prov
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_jax.png" class="img-fluid" %}
 
-However, we do the same experiment by *disabling the JIT compilation*. The result we get corroborates the theory. Indeed, one can observe in the following figure that the memory footprint of the `reverse-over-reverse` method is larger than the one of the `forward-over-reverse` and `reverse-over-forward` methods. This is because the `reverse-over-reverse` involves two successive backward differentiations while the two others involve only one reverse differentiation. Moreover, it scales linearly with the batch size, which was not the case in the previous figure in the small batch size regime.
+However, we do the same experiment by *disabling the JIT compilation*. The result we get corroborates the theory. Indeed, one can observe in the following figure that the memory footprint of the `reverse-over-reverse` method is larger than the one of the `forward-over-reverse` and `reverse-over-forward` methods. This is because the `reverse-over-reverse` involves two successive backward differentiations while the other two involve only one reverse differentiation. Moreover, it scales linearly with the batch size, which was not the case in the previous figure in the small batch size regime.
 
 In light of these two results, the clever memory allocation performed during just-in-time compilation reduces significantly the memory footprint of the HVP computations.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_jax_without_jit.png" class="img-fluid" %}
 
-In the following figure, we plot the results we get with the `PyTorch` implementation. One can observe that in all the cases the `forward-over-reverse` consumes much memory in comparison with the `reverse-over-forward` mode. It is almost at the same level as `reverse-over-reverse` mode, which is quite unexpected.
+In the following figure, we plot the results we get with the `PyTorch` implementation. One can observe that in all the cases the `forward-over-reverse` consumes more memory in comparison with the `reverse-over-forward` mode. It is almost at the same level as `reverse-over-reverse` mode, which is quite unexpected.
 
 The right plot of the evolution of the memory footprint with the batch size for the ResNet34 architecture evolves linearly as expected.
 
