--- a/_posts/2024-05-07-alibi-mlm.md
+++ b/_posts/2024-05-07-alibi-mlm.md
@@ -7,7 +7,10 @@ future: true
 htmlwidgets: true
 
 authors:
-  - name: Anonymous
+  - name: Jason Chuan-Chih Chou
+    url: https://scholar.google.com/citations?user=V7BXGawAAAAJ
+    affiliations:
+      name: Cohere For AI Community
 
 # must be the exact same name as your blogpost
 bibliography: 2024-05-07-alibi-mlm.bib
