--- a/assets/bibliography/2024-05-07-hidden-convex-relu.bib
+++ b/assets/bibliography/2024-05-07-hidden-convex-relu.bib
@@ -1,7 +1,22 @@
+@inproceedings{allen-zhuConvergenceTheoryDeep2019a,
+  title = {A Convergence Theory for Deep Learning via Over-Parameterization},
+  booktitle = {Proceedings of the 36th International Conference on Machine Learning},
+  author = {{Allen-Zhu}, Zeyuan and Li, Yuanzhi and Song, Zhao},
+  year = {2019},
+  month = may,
+  pages = {242--252},
+  publisher = {PMLR},
+  issn = {2640-3498},
+  urldate = {2023-11-23},
+  abstract = {Deep neural networks (DNNs) have demonstrated dominating performance in many fields; since AlexNet, networks used in practice are going wider and deeper. On the theoretical side, a long line of works have been focusing on why we can train neural networks when there is only one hidden layer. The theory of multi-layer networks remains unsettled. In this work, we prove simple algorithms such as stochastic gradient descent (SGD) can find Global Minima on the training objective of DNNs in Polynomial Time. We only make two assumptions: the inputs do not degenerate and the network is over-parameterized. The latter means the number of hidden neurons is sufficiently large: polynomial in L, the number of DNN layers and in n, the number of training samples. As concrete examples, starting from randomly initialized weights, we show that SGD attains 100\% training accuracy in classification tasks, or minimizes regression loss in linear convergence speed eps ~ e\^\{-T\}, with running time polynomial in n and L. Our theory applies to the widely-used but non-smooth ReLU activation, and to any smooth and possibly non-convex loss functions. In terms of network architectures, our theory at least applies to fully-connected neural networks, convolutional neural networks (CNN), and residual neural networks (ResNet).},
+  langid = {english},
+  file = {/home/savar/Zotero/storage/J5AT5RQZ/Allen-Zhu et al. - 2019 - A Convergence Theory for Deep Learning via Over-Pa.pdf}
+}
+
 @inproceedings{allen-zhuConvergenceTheoryDeep2019b,
   title = {A Convergence Theory for Deep Learning via Over-Parameterization},
   booktitle = {International Conference on Machine Learning},
-  author = {Allen-Zhu, Zeyuan and Li, Yuanzhi and Song, Zhao},
+  author = {{Allen-Zhu}, Zeyuan and Li, Yuanzhi and Song, Zhao},
   year = {2019},
   pages = {242--252},
   publisher = {PMLR},
@@ -85,9 +100,37 @@
   file = {/home/savar/Zotero/storage/KHE74GYY/Berthier - 2023 - Incremental learning in diagonal linear networks.pdf}
 }
 
+@misc{boursierGradientFlowDynamics2022b,
+  title = {Gradient Flow Dynamics of Shallow ReLU Networks for Square Loss and Orthogonal Inputs},
+  author = {Boursier, Etienne and {Pillaud-Vivien}, Loucas and Flammarion, Nicolas},
+  year = {2022},
+  month = oct,
+  number = {arXiv:2206.00939},
+  eprint = {2206.00939},
+  primaryclass = {cs, stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2206.00939},
+  urldate = {2023-05-15},
+  abstract = {The training of neural networks by gradient descent methods is a cornerstone of the deep learning revolution. Yet, despite some recent progress, a complete theory explaining its success is still missing. This article presents, for orthogonal input vectors, a precise description of the gradient flow dynamics of training one-hidden layer ReLU neural networks for the mean squared error at small initialisation. In this setting, despite non-convexity, we show that the gradient flow converges to zero loss and characterise its implicit bias towards minimum variation norm. Furthermore, some interesting phenomena are highlighted: a quantitative description of the initial alignment phenomenon and a proof that the process follows a specific saddle to saddle dynamics.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/home/savar/Zotero/storage/GFUYDNQG/Boursier et al. - 2022 - Gradient flow dynamics of shallow ReLU networks fo.pdf;/home/savar/Zotero/storage/BEF9KKY7/2206.html}
+}
+
+@article{boursierGradientFlowDynamics2022c,
+  title = {Gradient Flow Dynamics of Shallow Relu Networks for Square Loss and Orthogonal Inputs},
+  author = {Boursier, Etienne and {Pillaud-Vivien}, Loucas and Flammarion, Nicolas},
+  year = {2022},
+  journal = {Advances in Neural Information Processing Systems},
+  volume = {35},
+  pages = {20105--20118},
+  urldate = {2023-12-15},
+  file = {/home/savar/Zotero/storage/B2M446XU/Boursier et al. - 2022 - Gradient flow dynamics of shallow relu networks fo.pdf}
+}
+
 @article{boursierGradientFlowDynamics2022d,
   title = {Gradient Flow Dynamics of Shallow Relu Networks for Square Loss and Orthogonal Inputs},
-  author = {Boursier, Etienne and Pillaud-Vivien, Loucas and Flammarion, Nicolas},
+  author = {Boursier, Etienne and {Pillaud-Vivien}, Loucas and Flammarion, Nicolas},
   year = {2022},
   journal = {Advances in Neural Information Processing Systems},
   volume = {35},
